# langchain-agent

./: .gitignore  README.md  agent.py  async_runtime.py  audit_log.py  citations.py  contracts.py  knowledge_base.py  knowledge_citation_validator.py  knowledge_index.py  knowledge_runtime.py  knowledge_tools.py  main.py  persistent_session.py  production_runtime.py  pyproject.toml  quality_gate.py  rag_evaluation.py  session_store.py  storage_security.py  tool_execution.py  tools.py  web_service.py
.github/workflows/: ci.yml  real-model.yml
docs/: agent-development-roadmap.md
tests/: test_agent.py  test_async_agent.py  test_audit_log.py  test_citation_policy.py  test_cli.py  test_knowledge_base.py  test_knowledge_index.py  test_knowledge_runtime.py  test_online_citations.py  test_production_security.py  test_quality_gate.py  test_rag_evaluation.py  test_real_model_integration.py  test_tool_execution.py  test_tools.py  test_web_service.py
